[package]
name = "VoltBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serenity = "0.11.5"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
